<resources>
    <string name="app_name">Shoe Store App</string>

    <string name="login_fragment_label">Login</string>
    <string name="welcome_fragment_label">Welcome</string>
    <string name="instructions_fragment_label">Instructions</string>
    <string name="shoe_list_fragment_label">Shoe List</string>
    <string name="shoe_details_fragment_label">Shoe Details</string>

    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="hint_email_input_field">Enter your email</string>
    <string name="hint_password_input_field">Enter your password</string>
    <string name="btn_text_login">Login</string>
    <string name="btn_text_create_account">Create new account</string>
    <string name="welcome1">Thanks for using our app</string>
    <string name="welcome2">This app will allow you to view a list of shoes that you enter</string>
    <string name="txt_continue">Continue</string>
    <string name="instructions1">Next, You\'ll view the list of shoes that you have entered.</string>
    <string name="instructions2">You can add more shoes by pressing the \'+\' floating rounded button in the bottom right corner.</string>
    <string name="content_description_add_shoe">Add new shoe</string>
    <string name="menu_item_logout">Logout</string>
    <string name="label_shoe_name">Shoe Name</string>
    <string name="label_shoe_company">Shoe Company</string>
    <string name="label_shoe_size">Shoe Size</string>
    <string name="label_shoe_description">Shoe Description</string>
    <string name="hint_shoe_name_input_field">Enter name</string>
    <string name="hint_shoe_company_input_field">Enter company</string>
    <string name="hint_shoe_size_input_field">Enter size</string>
    <string name="hint_shoe_description_input_field">Enter description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

</resources>